--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fantastic Beasts Hangman</title>
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
     
