--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
-    
+    <img src="https://www.fontspace.com/fz-fonts/animales-fantastic?text=Hangman&fontsize=50&foreground=f5e529">
 </body>
 </html>
