added Hangman title, centered, in e99548 color, 50px top margin, 40 px font-size, in animales_fantastic, Times New Roman, sans-serif font-family

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fantastic Beasts Hangman</title>
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
-    <img src="https://www.fontspace.com/fz-fonts/animales-fantastic?text=Hangman&fontsize=50&foreground=f5e529">
+    <div class="title">Hangman</div>
 </body>
 </html>
