--- a/index.html
+++ b/index.html
@@ -13,11 +13,25 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body>
+<body id="body">
 
     <img id="fantastic" src="assets/images/fantastic_beasts_3.jpg" alt="Fantastic Beasts">
     <div class="title">Hangman</div>
+    
+    <div class="container">
+       
+        <div class="row">
+            <div class="col-md-6" id="image">
 
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
