added array of all the words to be used

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
             </div>
 
             <div class="col-md-6" id="guessing">
+                
+                <div id="message">Press Any Key To Start</div>
 
             </div>
-            
+
         </div>
     </div>
 </body>
