added id wins, current, guessed.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="assets/javascript/game.js"></script>
-    </head>
+</head>
 
 <body id="body">
 
@@ -25,11 +25,34 @@
 
             <div class="col-md-6" id="image">
 
+                <div class="row">
+
+<div class="col-md-12" id="previous"></div>
+
+                   <div class="col-md-12"> 
+                       <img id="first_image" class="img-fluid mt-4 mb-4" src="assets/images/fantastic_beasts.jpg"
+                        alt="Fantastic Beasts">
+                        </div>
+                </div>
             </div>
 
             <div class="col-md-6" id="guessing">
-                
-                <div id="message">Press Any Key To Start</div>
+
+                <row>
+                    <div class="col-md-12" id="message">Press Any Letter To Start</div>
+                </row>
+
+                <row>
+                    <div class="col-md-12" id="wins">Words Guessed Correctly:</div>
+                </row>
+
+                <row>
+                    <div class="col-md-12" id="current"></div>
+                </row>
+
+                <row>
+                    <div class="col-md-12" id="guessed"></div>
+                </row>
 
             </div>
 
