got the top and bottom margins laid out to how I think I like them

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
             <div class="col-md-6" id="image">
 
                 <div class="row">
-
                     <div class="col-md-12" id="previous"></div>
+                </div>
 
-                    <div class="col-md-12">
-                        <img id="first_image" class="img-fluid mt-5 mb-5" src="assets/images/fantastic_beasts.jpg"
-                            alt="Fantastic Beasts">
+                <div class="row">
+                    <div class="col-md-12" id="picture">
+                        <img class="img-fluid" src="assets/images/fantastic_beasts.jpg" alt="Fantastic Beasts">
                     </div>
                 </div>
+
             </div>
 
             <div class="col-md-6" id="guessing">
@@ -65,10 +66,6 @@
 
                 <row>
                     <div class="col-md-12" id="letters"></div>
-                </row>
-
-                <row>
-                    <div class="col-md-12"></div>
                 </row>
 
             </div>
