added placeholders to help with borders

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="col-md-6" id="image">
 
                 <div class="row">
-                    <div class="col-md-12" id="previous"></div>
+                    <div class="col-md-12" id="previous"> Previous Word</div>
                 </div>
 
                 <div class="row">
@@ -49,7 +49,7 @@
                 </row>
 
                 <row>
-                    <div class="col-md-12" id="wins"></div>
+                    <div class="col-md-12" id="wins">0</div>
                 </row>
 
                 <row>
@@ -57,7 +57,7 @@
                 </row>
 
                 <row>
-                    <div class="col-md-12" id="current"></div>
+                    <div class="col-md-12" id="current">_</div>
                 </row>
 
                 <row>
@@ -65,7 +65,7 @@
                 </row>
 
                 <row>
-                    <div class="col-md-12" id="letters"></div>
+                    <div class="col-md-12" id="letters">_</div>
                 </row>
 
             </div>
