added Guesses Remaining.  Removed borders from the previous and guessing ids, put it on the title class instead.  Not able to get a border down the middle that goes top to bottom

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container" id="title">
         <div class="title">Hangman</div>
     </div>
-    <div class="container">
+    <div class="container" id="wordGame">
 
         <div class="row">
 
@@ -66,6 +66,14 @@
 
                 <row>
                     <div class="col-md-12" id="letters">_</div>
+                </row>
+
+                <row>
+                    <div class="col-md-12" id="text">Guesses Remaining:</div>
+                </row>
+
+                <row>
+                    <div class="col-md-12" id="remaining">12</div>
                 </row>
 
             </div>
