trying out ul for the letters

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                 </row>
 
                 <row>
-                    <div class="col-md-12" id="current">_</div>
+                    <div class="col-md-12" id="current">
+                        <ul id="dashes"></ul>
+                    </div>
                 </row>
 
                 <row>
@@ -65,7 +67,9 @@
                 </row>
 
                 <row>
-                    <div class="col-md-12" id="letters">_</div>
+                    <div class="col-md-12" id="letters">
+                        <ul id="guessed"></ul>    _
+                    </div>
                 </row>
 
                 <row>
