changed placedholder number in remaining to a variable number

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </row>
 
                 <row>
-                    <div class="col-md-12" id="remaining">12</div>
+                    <div class="col-md-12" id="remaining"></div>
                 </row>
 
             </div>
