says what the previous word is after you lose or win

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </row>
 
                 <row>
-                    <div class="col-md-12" id="wins">0</div>
+                    <div class="col-md-12" id="wins"></div>
                 </row>
 
                 <row>
