--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-12" id="picture">
-                        <img class="img-fluid" src="assets/images/fantastic_beasts.jpg" alt="Fantastic Beasts">
+                    <div class="col-md-12">
+                        <img class="img-fluid picture" src="assets/images/fantastic_beasts.jpg" alt="Fantastic Beasts">
                     </div>
                 </div>
 
