figured out how to replace images, now to put them in an array and have them go in the right spot

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <img class="img-fluid picture" src="assets/images/fantastic_beasts.jpg" alt="Fantastic Beasts">
+                        <img class="img-fluid" id="picture" src="assets/images/fantastic_beasts.jpg" alt="Fantastic Beasts">
                     </div>
                 </div>
 
